@@ -117,7 +117,7 @@ struct checkpt
 
 extern noreturn void 	sh_done(int);
 extern void 	sh_fault(int);
-extern void	sh_update_columns_lines(void);
+extern void	sh_winsize(int*,int*);
 extern void 	sh_sigclear(int);
 extern void 	sh_sigdone(void);
 extern void	sh_siginit(void);
