@@ -7513,6 +7513,10 @@ above) are only exported while their name space is active.
 .B \-b
 Prints job completion messages as soon as a background job changes
 state rather than waiting for the next prompt.
+If one of the shell line editors is in use (see
+.I In-line Editing Options
+above), the completion message is inserted directly above the
+command line being typed.
 .TP 8
 .B \-e
 Unless contained in a
