@@ -2445,8 +2445,8 @@ void	sh_menu(Sfio_t *outfile,int argn,char *argv[])
 	register char **arg;
 	int nrow, ncol=1, ndigits=1;
 	int fldsize, wsize = ed_window();
-	char *cp = nv_getval(sh_scoped(LINES));
-	nrow = (cp?1+2*((int)strtol(cp, (char**)0, 10)/3):NROW);
+	sh_winsize(&nrow,NIL(int*));
+	nrow = nrow ? (2 * (nrow / 3) + 1) : NROW;
 	for(i=argn;i >= 10;i /= 10)
 		ndigits++;
 	if(argn < nrow)
