@@ -3,6 +3,17 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-07-24:
+
+- New feature to make 'set -b'/'set -o notify' more usable. When that option
+  is on (and either the vi or emacs/gmacs line editor is in use), 'Done' and
+  similar notifications from completed background jobs no longer mess up the
+  command line you're typing. Instead, the notification is inserted directly
+  above the line you're typing, without affecting your command line display.
+
+- Fixed a bug that caused the -b/--notify option to only notify on one job if
+  more than one background job completed at the same time.
+
 2022-07-21:
 
 - Fixed a bug where a reproducible $RANDOM sequence (after assigning a
